<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_second_activity"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_second_activity_descr"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/square_count_cnf_ch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_square_count_cnf_ch"
        android:textSize="32sp"
        android:textStyle="bold" />

</LinearLayout>